# fringe

./: remake.sh
docs/: install.md
python/: CMakeLists.txt  Network.py  adjustMiniStacks.py  integratePS.py  plotCoherence.py  tops2vrt.py
src/ampdispersion/: ampdispersion.py
src/nmap/: nmap.py
src/sequential/: CMakeLists.txt  sequential_PL.py
